cmake_minimum_required(VERSION 3.8)
project(jianzhiOfferC__)

set(CMAKE_CXX_STANDARD 11)

add_executable(jianzhiOfferC__ main.cpp _02.cpp _02.h _04.cpp _04.h List.cpp List.h _05.cpp _05.h _06.cpp _06.h _07.cpp _07.h Sort.cpp Sort.h _08.cpp _08.h _10.cpp _10.h _11.cpp _11.h _12.cpp _12.h _13.cpp _13.h ListNode.h _14.cpp _14.h _15.cpp _15.h _16.cpp _16.h _17.cpp _17.h _18.cpp _18.h BinaryTreeNode.h _19.cpp _19.h _20.cpp _20.h)